<?xml version="1.0" encoding="UTF-8"?>

        <LinearLayout
        tools:context=".MainActivity"
        android:orientation="vertical"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:android="http://schemas.android.com/apk/res/android">

    <EditText
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="28dp"
            android:id="@+id/firstname"
            android:ems="10" android:inputType="textPersonName"
            android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginRight="8dp" android:hint="@string/enter_day"/>

    <EditText
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_marginTop="32dp"
            android:id="@+id/lastname"
            android:ems="10"
            android:inputType="textPersonName"
            app:layout_constraintTop_toBottomOf="@+id/firstname" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:hint="@string/enter_course"/>

    <EditText
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_marginTop="32dp"
            android:id="@+id/address"
            android:ems="10"
            android:inputType="textPersonName"
            app:layout_constraintTop_toBottomOf="@+id/lastname" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp" android:hint="@string/enter_time"/>

    <EditText
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_marginTop="32dp"
            android:id="@+id/dept"
            android:ems="10"
            android:inputType="textPersonName"
            app:layout_constraintTop_toBottomOf="@+id/address" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:hint="@string/enter_venue"/>

    <Button
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:id="@+id/savebtn"
            android:text="@string/save"
            tools:layout_editor_absoluteY="338dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"/>

    <Button
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_marginTop="32dp"
            android:id="@+id/databaseBtn"
            android:text="@string/database"
            app:layout_constraintTop_toBottomOf="@+id/savebtn" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"/>

</LinearLayout>