<?xml version="1.0" encoding="UTF-8"?>

        <LinearLayout
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:android="http://schemas.android.com/apk/res/android">

    <EditText
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_marginRight="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="8dp"
            android:id="@+id/firstnameUpdate"
            android:ems="10"
            android:inputType="textPersonName" android:hint="@string/enter_day"/>

    <EditText
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_marginRight="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            android:layout_marginTop="60dp"
            android:id="@+id/lastnameUpdate"
            android:ems="10"
            android:inputType="textPersonName"
            app:layout_constraintTop_toBottomOf="@+id/firstnameUpdate" android:hint="@string/enter_course"/>

    <EditText
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_marginRight="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            android:layout_marginTop="60dp"
            android:id="@+id/addressUpdate"
            android:ems="10"
            android:inputType="textPersonName"
            app:layout_constraintTop_toBottomOf="@+id/lastnameUpdate" android:hint="@string/enter_time"/>

    <EditText android:layout_height="wrap_content" android:layout_width="wrap_content" android:layout_marginRight="8dp"
              app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:layout_marginLeft="8dp"
              app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
              android:layout_marginTop="60dp" android:id="@+id/departmentUpdate" android:ems="10"
              android:inputType="textPersonName" app:layout_constraintTop_toBottomOf="@+id/addressUpdate"
              android:hint="@string/enter_venue"/>

</LinearLayout>